y.output
Terminais sem uso na gramática

    TK_AND
    TK_OR
    TK_CHARACTER
    TK_CLASS_DEFINITION
    TK_CLASS_NAME


Estado 10 conflitos: 1 de deslocamento/redução
Estado 35 conflitos: 10 de deslocamento/redução
Estado 89 conflitos: 4 de deslocamento/redução


Gramática

    0 $accept: program $end

    1 program: headers main '(' ')' '{' body return '}'

    2 $@1: ε

    3 body: TK_FOR $@1 '(' statement ';' condition ';' statement ')' '{' body '}'

    4 $@2: ε

    5 $@3: ε

    6 $@4: ε

    7 body: TK_IF $@2 '(' condition ')' $@3 '{' body '}' $@4 else
    8     | statement ';'
    9     | body body

   10 $@5: ε

   11 body: TK_PRINTF $@5 '(' TK_STRING ')' ';'

   12 $@6: ε

   13 body: TK_SCANF $@6 '(' TK_STRING ',' '&' TK_ID ')' ';'

   14 $@7: ε

   15 else: TK_ELSE $@7 '{' body '}'
   16     | ε

   17 condition: value relop value
   18          | TK_TRUE
   19          | TK_FALSE
   20          | ε

   21 headers: headers headers

   22 $@8: ε

   23 headers: TK_INCLUDE $@8

   24 datatype: TK_TYPE_INT
   25         | TK_TYPE_FLOAT
   26         | TK_CHAR
   27         | TK_VOID

   28 main: datatype TK_ID

   29 value: TK_NUMBER
   30      | TK_NUMBER_FLOAT
   31      | TK_CHAR
   32      | TK_ID

   33 init: '=' value
   34     | ε

   35 expression: expression arithmetic expression
   36           | value

   37 arithmetic: TK_ADD
   38           | TK_SUBTRACT
   39           | TK_MULTIPLY
   40           | TK_DIVIDE

   41 relop: TK_LT
   42      | TK_GT
   43      | TK_LE
   44      | TK_GE
   45      | TK_EQ
   46      | TK_NE

   47 $@9: ε

   48 statement: datatype TK_ID $@9 init

   49 $@10: ε

   50 statement: TK_ID $@10 '=' expression

   51 $@11: ε

   52 statement: TK_ID $@11 relop expression

   53 $@12: ε

   54 statement: TK_ID $@12 TK_UNARY
   55          | TK_UNARY TK_ID

   56 $@13: ε

   57 return: TK_RETURN $@13 value ';'
   58       | ε


Terminais, com as regras onde eles aparecem

    $end (0) 0
    '&' (38) 13
    '(' (40) 1 3 7 11 13
    ')' (41) 1 3 7 11 13
    ',' (44) 13
    ';' (59) 3 8 11 13 57
    '=' (61) 33 50
    '{' (123) 1 3 7 15
    '}' (125) 1 3 7 15
    error (256)
    TK_VOID (258) 27
    TK_PRINTF <nd_obj> (259) 11
    TK_SCANF <nd_obj> (260) 13
    TK_TYPE_INT <nd_obj> (261) 24
    TK_TYPE_FLOAT <nd_obj> (262) 25
    TK_CHAR <nd_obj> (263) 26 31
    TK_RETURN <nd_obj> (264) 57
    TK_FOR <nd_obj> (265) 3
    TK_IF <nd_obj> (266) 7
    TK_ELSE <nd_obj> (267) 15
    TK_INCLUDE <nd_obj> (268) 23
    TK_TRUE <nd_obj> (269) 18
    TK_FALSE <nd_obj> (270) 19
    TK_NUMBER <nd_obj> (271) 29
    TK_NUMBER_FLOAT <nd_obj> (272) 30
    TK_ID <nd_obj> (273) 13 28 32 48 50 52 54 55
    TK_UNARY <nd_obj> (274) 54 55
    TK_LE <nd_obj> (275) 43
    TK_GE <nd_obj> (276) 44
    TK_EQ <nd_obj> (277) 45
    TK_NE <nd_obj> (278) 46
    TK_GT <nd_obj> (279) 42
    TK_LT <nd_obj> (280) 41
    TK_AND <nd_obj> (281)
    TK_OR <nd_obj> (282)
    TK_ADD <nd_obj> (283) 37
    TK_SUBTRACT <nd_obj> (284) 38
    TK_DIVIDE <nd_obj> (285) 40
    TK_MULTIPLY <nd_obj> (286) 39
    TK_STRING <nd_obj> (287) 11 13
    TK_CHARACTER <nd_obj> (288)
    TK_CLASS_DEFINITION <nd_obj> (289)
    TK_CLASS_NAME <nd_obj> (290)


Não terminais com as regras onde eles aparecem

    $accept (44)
        à esquerda: 0
    program <nd_obj> (45)
        à esquerda: 1
        à direita: 0
    body <nd_obj> (46)
        à esquerda: 3 7 8 9 11 13
        à direita: 1 3 7 9 15
    $@1 (47)
        à esquerda: 2
        à direita: 3
    $@2 (48)
        à esquerda: 4
        à direita: 7
    $@3 (49)
        à esquerda: 5
        à direita: 7
    $@4 (50)
        à esquerda: 6
        à direita: 7
    $@5 (51)
        à esquerda: 10
        à direita: 11
    $@6 (52)
        à esquerda: 12
        à direita: 13
    else <nd_obj> (53)
        à esquerda: 15 16
        à direita: 7
    $@7 (54)
        à esquerda: 14
        à direita: 15
    condition <nd_obj3> (55)
        à esquerda: 17 18 19 20
        à direita: 3 7
    headers <nd_obj> (56)
        à esquerda: 21 23
        à direita: 1 21
    $@8 (57)
        à esquerda: 22
        à direita: 23
    datatype <nd_obj> (58)
        à esquerda: 24 25 26 27
        à direita: 28 48
    main <nd_obj> (59)
        à esquerda: 28
        à direita: 1
    value <nd_obj2> (60)
        à esquerda: 29 30 31 32
        à direita: 17 33 36 57
    init <nd_obj2> (61)
        à esquerda: 33 34
        à direita: 48
    expression <nd_obj2> (62)
        à esquerda: 35 36
        à direita: 35 50 52
    arithmetic <nd_obj> (63)
        à esquerda: 37 38 39 40
        à direita: 35
    relop <nd_obj> (64)
        à esquerda: 41 42 43 44 45 46
        à direita: 17 52
    statement <nd_obj> (65)
        à esquerda: 48 50 52 54 55
        à direita: 3 8
    $@9 (66)
        à esquerda: 47
        à direita: 48
    $@10 (67)
        à esquerda: 49
        à direita: 50
    $@11 (68)
        à esquerda: 51
        à direita: 52
    $@12 (69)
        à esquerda: 53
        à direita: 54
    return <nd_obj> (70)
        à esquerda: 57 58
        à direita: 1
    $@13 (71)
        à esquerda: 56
        à direita: 57


Estado 0

    0 $accept: • program $end

    TK_INCLUDE  deslocar, e ir ao estado 1

    program  ir ao estado 2
    headers  ir ao estado 3


Estado 1

   23 headers: TK_INCLUDE • $@8

    $padrão  reduzir usando a regra 22 ($@8)

    $@8  ir ao estado 4


Estado 2

    0 $accept: program • $end

    $end  deslocar, e ir ao estado 5


Estado 3

    1 program: headers • main '(' ')' '{' body return '}'
   21 headers: headers • headers

    TK_VOID        deslocar, e ir ao estado 6
    TK_TYPE_INT    deslocar, e ir ao estado 7
    TK_TYPE_FLOAT  deslocar, e ir ao estado 8
    TK_CHAR        deslocar, e ir ao estado 9
    TK_INCLUDE     deslocar, e ir ao estado 1

    headers   ir ao estado 10
    datatype  ir ao estado 11
    main      ir ao estado 12


Estado 4

   23 headers: TK_INCLUDE $@8 •

    $padrão  reduzir usando a regra 23 (headers)


Estado 5

    0 $accept: program $end •

    $padrão  aceitar


Estado 6

   27 datatype: TK_VOID •

    $padrão  reduzir usando a regra 27 (datatype)


Estado 7

   24 datatype: TK_TYPE_INT •

    $padrão  reduzir usando a regra 24 (datatype)


Estado 8

   25 datatype: TK_TYPE_FLOAT •

    $padrão  reduzir usando a regra 25 (datatype)


Estado 9

   26 datatype: TK_CHAR •

    $padrão  reduzir usando a regra 26 (datatype)


Estado 10

   21 headers: headers • headers
   21        | headers headers •

    TK_INCLUDE  deslocar, e ir ao estado 1

    TK_INCLUDE  [reduzir usando a regra 21 (headers)]
    $padrão     reduzir usando a regra 21 (headers)

    headers  ir ao estado 10


Estado 11

   28 main: datatype • TK_ID

    TK_ID  deslocar, e ir ao estado 13


Estado 12

    1 program: headers main • '(' ')' '{' body return '}'

    '('  deslocar, e ir ao estado 14


Estado 13

   28 main: datatype TK_ID •

    $padrão  reduzir usando a regra 28 (main)


Estado 14

    1 program: headers main '(' • ')' '{' body return '}'

    ')'  deslocar, e ir ao estado 15


Estado 15

    1 program: headers main '(' ')' • '{' body return '}'

    '{'  deslocar, e ir ao estado 16


Estado 16

    1 program: headers main '(' ')' '{' • body return '}'

    TK_VOID        deslocar, e ir ao estado 6
    TK_PRINTF      deslocar, e ir ao estado 17
    TK_SCANF       deslocar, e ir ao estado 18
    TK_TYPE_INT    deslocar, e ir ao estado 7
    TK_TYPE_FLOAT  deslocar, e ir ao estado 8
    TK_CHAR        deslocar, e ir ao estado 9
    TK_FOR         deslocar, e ir ao estado 19
    TK_IF          deslocar, e ir ao estado 20
    TK_ID          deslocar, e ir ao estado 21
    TK_UNARY       deslocar, e ir ao estado 22

    body       ir ao estado 23
    datatype   ir ao estado 24
    statement  ir ao estado 25


Estado 17

   11 body: TK_PRINTF • $@5 '(' TK_STRING ')' ';'

    $padrão  reduzir usando a regra 10 ($@5)

    $@5  ir ao estado 26


Estado 18

   13 body: TK_SCANF • $@6 '(' TK_STRING ',' '&' TK_ID ')' ';'

    $padrão  reduzir usando a regra 12 ($@6)

    $@6  ir ao estado 27


Estado 19

    3 body: TK_FOR • $@1 '(' statement ';' condition ';' statement ')' '{' body '}'

    $padrão  reduzir usando a regra 2 ($@1)

    $@1  ir ao estado 28


Estado 20

    7 body: TK_IF • $@2 '(' condition ')' $@3 '{' body '}' $@4 else

    $padrão  reduzir usando a regra 4 ($@2)

    $@2  ir ao estado 29


Estado 21

   50 statement: TK_ID • $@10 '=' expression
   52          | TK_ID • $@11 relop expression
   54          | TK_ID • $@12 TK_UNARY

    TK_UNARY  reduzir usando a regra 53 ($@12)
    '='       reduzir usando a regra 49 ($@10)
    $padrão   reduzir usando a regra 51 ($@11)

    $@10  ir ao estado 30
    $@11  ir ao estado 31
    $@12  ir ao estado 32


Estado 22

   55 statement: TK_UNARY • TK_ID

    TK_ID  deslocar, e ir ao estado 33


Estado 23

    1 program: headers main '(' ')' '{' body • return '}'
    9 body: body • body

    TK_VOID        deslocar, e ir ao estado 6
    TK_PRINTF      deslocar, e ir ao estado 17
    TK_SCANF       deslocar, e ir ao estado 18
    TK_TYPE_INT    deslocar, e ir ao estado 7
    TK_TYPE_FLOAT  deslocar, e ir ao estado 8
    TK_CHAR        deslocar, e ir ao estado 9
    TK_RETURN      deslocar, e ir ao estado 34
    TK_FOR         deslocar, e ir ao estado 19
    TK_IF          deslocar, e ir ao estado 20
    TK_ID          deslocar, e ir ao estado 21
    TK_UNARY       deslocar, e ir ao estado 22

    $padrão  reduzir usando a regra 58 (return)

    body       ir ao estado 35
    datatype   ir ao estado 24
    statement  ir ao estado 25
    return     ir ao estado 36


Estado 24

   48 statement: datatype • TK_ID $@9 init

    TK_ID  deslocar, e ir ao estado 37


Estado 25

    8 body: statement • ';'

    ';'  deslocar, e ir ao estado 38


Estado 26

   11 body: TK_PRINTF $@5 • '(' TK_STRING ')' ';'

    '('  deslocar, e ir ao estado 39


Estado 27

   13 body: TK_SCANF $@6 • '(' TK_STRING ',' '&' TK_ID ')' ';'

    '('  deslocar, e ir ao estado 40


Estado 28

    3 body: TK_FOR $@1 • '(' statement ';' condition ';' statement ')' '{' body '}'

    '('  deslocar, e ir ao estado 41


Estado 29

    7 body: TK_IF $@2 • '(' condition ')' $@3 '{' body '}' $@4 else

    '('  deslocar, e ir ao estado 42


Estado 30

   50 statement: TK_ID $@10 • '=' expression

    '='  deslocar, e ir ao estado 43


Estado 31

   52 statement: TK_ID $@11 • relop expression

    TK_LE  deslocar, e ir ao estado 44
    TK_GE  deslocar, e ir ao estado 45
    TK_EQ  deslocar, e ir ao estado 46
    TK_NE  deslocar, e ir ao estado 47
    TK_GT  deslocar, e ir ao estado 48
    TK_LT  deslocar, e ir ao estado 49

    relop  ir ao estado 50


Estado 32

   54 statement: TK_ID $@12 • TK_UNARY

    TK_UNARY  deslocar, e ir ao estado 51


Estado 33

   55 statement: TK_UNARY TK_ID •

    $padrão  reduzir usando a regra 55 (statement)


Estado 34

   57 return: TK_RETURN • $@13 value ';'

    $padrão  reduzir usando a regra 56 ($@13)

    $@13  ir ao estado 52


Estado 35

    9 body: body • body
    9     | body body •

    TK_VOID        deslocar, e ir ao estado 6
    TK_PRINTF      deslocar, e ir ao estado 17
    TK_SCANF       deslocar, e ir ao estado 18
    TK_TYPE_INT    deslocar, e ir ao estado 7
    TK_TYPE_FLOAT  deslocar, e ir ao estado 8
    TK_CHAR        deslocar, e ir ao estado 9
    TK_FOR         deslocar, e ir ao estado 19
    TK_IF          deslocar, e ir ao estado 20
    TK_ID          deslocar, e ir ao estado 21
    TK_UNARY       deslocar, e ir ao estado 22

    TK_VOID        [reduzir usando a regra 9 (body)]
    TK_PRINTF      [reduzir usando a regra 9 (body)]
    TK_SCANF       [reduzir usando a regra 9 (body)]
    TK_TYPE_INT    [reduzir usando a regra 9 (body)]
    TK_TYPE_FLOAT  [reduzir usando a regra 9 (body)]
    TK_CHAR        [reduzir usando a regra 9 (body)]
    TK_FOR         [reduzir usando a regra 9 (body)]
    TK_IF          [reduzir usando a regra 9 (body)]
    TK_ID          [reduzir usando a regra 9 (body)]
    TK_UNARY       [reduzir usando a regra 9 (body)]
    $padrão        reduzir usando a regra 9 (body)

    body       ir ao estado 35
    datatype   ir ao estado 24
    statement  ir ao estado 25


Estado 36

    1 program: headers main '(' ')' '{' body return • '}'

    '}'  deslocar, e ir ao estado 53


Estado 37

   48 statement: datatype TK_ID • $@9 init

    $padrão  reduzir usando a regra 47 ($@9)

    $@9  ir ao estado 54


Estado 38

    8 body: statement ';' •

    $padrão  reduzir usando a regra 8 (body)


Estado 39

   11 body: TK_PRINTF $@5 '(' • TK_STRING ')' ';'

    TK_STRING  deslocar, e ir ao estado 55


Estado 40

   13 body: TK_SCANF $@6 '(' • TK_STRING ',' '&' TK_ID ')' ';'

    TK_STRING  deslocar, e ir ao estado 56


Estado 41

    3 body: TK_FOR $@1 '(' • statement ';' condition ';' statement ')' '{' body '}'

    TK_VOID        deslocar, e ir ao estado 6
    TK_TYPE_INT    deslocar, e ir ao estado 7
    TK_TYPE_FLOAT  deslocar, e ir ao estado 8
    TK_CHAR        deslocar, e ir ao estado 9
    TK_ID          deslocar, e ir ao estado 21
    TK_UNARY       deslocar, e ir ao estado 22

    datatype   ir ao estado 24
    statement  ir ao estado 57


Estado 42

    7 body: TK_IF $@2 '(' • condition ')' $@3 '{' body '}' $@4 else
